plugins/platforms/drm/egl_gbm_backend.h
@@ -71,6 +71,13 @@ private:
          * @brief The damage history for the past 10 frames.
          */
         QList<QRegion> damageHistory;
+
+        struct {
+            GLuint framebuffer = 0;
+            GLuint texture = 0;
+            std::shared_ptr<GLVertexBuffer> vbo;
+            std::shared_ptr<GLShader> shader;
+        } render;
     };
 
     void createOutput(DrmOutput *drmOutput);
@@ -80,10 +87,18 @@ private:
 
     bool makeContextCurrent(const Output &output) const;
     void setViewport(const Output &output) const;
+
+    bool resetFramebuffer(Output &output);
+    bool initRenderTarget(Output &output);
+
+    void prepareRenderFramebuffer(const Output &output) const;
+    void renderFramebufferToSurface(Output &output);
+
     void presentOnOutput(Output &output);
 
     void removeOutput(DrmOutput *drmOutput);
-    void cleanupOutput(const Output &output);
+    void cleanupOutput(Output &output);
+    void cleanupFramebuffer(Output &output);
 
     DrmBackend *m_backend;
     QVector<Output> m_outputs;
